change transparency, long text testing, improve recommanding algorithm

--- a/ng-blog/src/app/posts/post-dashboard/post-dashboard.component.css
+++ b/ng-blog/src/app/posts/post-dashboard/post-dashboard.component.css
@@ -16,5 +16,6 @@ img {
      background-size: cover;
      background-attachment: fixed;
      bottom: 0px;
-     height: 100%;
+     min-height: 550px;
 }
+
