new feature: editing the name of friend, fix a background bug, modify the font of post content.

--- a/ng-blog/src/app/friends/friends-chat/friends-chat.component.html
+++ b/ng-blog/src/app/friends/friends-chat/friends-chat.component.html
@@ -4,8 +4,7 @@
         <mat-card-header>
           <mat-card-title>Chat</mat-card-title>
           <mat-card-subtitle>
-              <div>User</div> 
-              <div>{{receiverId}}</div>
+              <div>{{receiverName}}</div>
             </mat-card-subtitle>
           <button mat-button routerLink="/friendlist" id="fw"><mat-icon>forward</mat-icon></button>
         </mat-card-header>
