--- a/ng-blog/src/app/friends/friends-list/friends-list.component.html
+++ b/ng-blog/src/app/friends/friends-list/friends-list.component.html
@@ -6,14 +6,24 @@
     </mat-card-header>
     <mat-card-content>
         <div *ngFor="let friend of uFriends | async; index as i">
-        <mat-expansion-panel routerLink="/chat/{{friend}}" hideToggle>
-            <mat-expansion-panel-header>
-              <mat-panel-title>
-                User {{friend}}
-              </mat-panel-title>
-            </mat-expansion-panel-header>
-        </mat-expansion-panel>
-        <button id="df" mat-icon-button (click)="delete(i)"><mat-icon matRipple >delete</mat-icon></button>
+          <mat-accordion>
+            <mat-expansion-panel>
+              <mat-expansion-panel-header>
+                <mat-panel-title>
+                  {{friend.name}}
+                </mat-panel-title>
+              </mat-expansion-panel-header>
+              <mat-form-field>
+                <input matInput [(ngModel)]="name" name="name">
+              </mat-form-field>
+              <button mat-flat-button color="primary" (click)="update((i))" [disabled]="!name">
+                <mat-icon>create</mat-icon>Edit Name</button>
+              <button id="ch" mat-flat-button color="accent" routerLink="/chat/{{friend.id}}">
+                <mat-icon>sentiment_very_satisfied</mat-icon>Chat</button>
+              <button mat-flat-button color="warn" (click)="delete(i)">
+                <mat-icon>delete</mat-icon>Delete</button>
+            </mat-expansion-panel>
+          </mat-accordion>
         </div>
     </mat-card-content>
 </mat-card>
