--- a/ng-blog/src/app/posts/post-detail/post-detail.component.html
+++ b/ng-blog/src/app/posts/post-detail/post-detail.component.html
@@ -21,12 +21,13 @@
       <br>
       <mat-card>
         <img mat-card-image src="{{post.image}}" alt="{{post.title}}">
-        <h2>{{post.title}}</h2>
+        <h1>{{post.title}}</h1>
         <p>
           <small>Posted by {{post.author}} &bull; on {{post.published.toDate() | date: 'medium'}}</small>
         </p>
+        <br>
         <mat-card-content>
-          <p>{{ post.content }}</p>
+          <p id="txt">{{ post.content }}</p>
         </mat-card-content>
         <mat-card-actions align="end" *ngIf="auth.currentUserId === post.authorId">
           <button mat-icon-button (click)="editing=true">
