--- a/ng-blog/src/app/posts/post-list/post-list.component.css
+++ b/ng-blog/src/app/posts/post-list/post-list.component.css
@@ -32,6 +32,7 @@ img {
      background-size: cover;
      background-attachment: fixed;
      bottom: 0px;
+     min-height: 550px;
 }
 
 mat-card {
