add unread message notification feature, fix some UI bugs, add some icons

--- a/ng-blog/src/app/friends/friends-chat/friends-chat.component.css
+++ b/ng-blog/src/app/friends/friends-chat/friends-chat.component.css
@@ -5,8 +5,11 @@ mat-card {
 }
 
 #fw {
-    margin-left: 470px;
-    margin-top: -20px;
+    float: right
+}
+
+#blk {
+    width: 550px;
 }
 
 mat-form-field {
