--- a/ng-blog/src/app/friends/friends-chat/friends-chat.component.html
+++ b/ng-blog/src/app/friends/friends-chat/friends-chat.component.html
@@ -4,9 +4,9 @@
         <mat-card-header>
           <mat-card-title>Chat</mat-card-title>
           <mat-card-subtitle>
-              <div>{{receiverName}}</div>
+              {{receiverName}}
             </mat-card-subtitle>
-          <button mat-button routerLink="/friendlist" id="fw"><mat-icon>forward</mat-icon></button>
+          <div id="blk"><button mat-button routerLink="/friendlist" id="fw"><mat-icon>forward</mat-icon></button></div>
         </mat-card-header>
         <mat-card-content>
             <perfect-scrollbar class="container">
