--- a/ng-blog/src/app/posts/post-detail/post-detail.component.html
+++ b/ng-blog/src/app/posts/post-detail/post-detail.component.html
@@ -23,7 +23,7 @@
         <img mat-card-image src="{{post.image}}" alt="{{post.title}}">
         <h1>{{post.title}}</h1>
         <p>
-          <small>Posted by {{post.author}} &bull; on {{post.published.toDate() | date: 'medium'}}</small>
+          <small>Posted by {{post.author}} &bull; on {{post.published}}</small>
         </p>
         <br>
         <mat-card-content>
