--- a/ng-blog/src/app/friends/friends-list/friends-list.component.html
+++ b/ng-blog/src/app/friends/friends-list/friends-list.component.html
@@ -10,7 +10,8 @@
             <mat-expansion-panel>
               <mat-expansion-panel-header>
                 <mat-panel-title>
-                  {{friend.name}}
+                  <div *ngIf="friend.read; else elseBlock">{{friend.name}}</div>
+                  <ng-template #elseBlock>{{friend.name}}   (have new messages)</ng-template>
                 </mat-panel-title>
               </mat-expansion-panel-header>
               <mat-form-field>
@@ -19,7 +20,7 @@
               <button mat-flat-button color="primary" (click)="update((i))" [disabled]="!name">
                 <mat-icon>create</mat-icon>Edit Name</button>
               <button id="ch" mat-flat-button color="accent" routerLink="/chat/{{friend.id}}">
-                <mat-icon>sentiment_very_satisfied</mat-icon>Chat</button>
+                <mat-icon>chat</mat-icon>Chat</button>
               <button mat-flat-button color="warn" (click)="delete(i)">
                 <mat-icon>delete</mat-icon>Delete</button>
             </mat-expansion-panel>
