fix time format bug, modify the rename feature

--- a/ng-blog/src/app/friends/friends-chat/friends-chat.component.css
+++ b/ng-blog/src/app/friends/friends-chat/friends-chat.component.css
@@ -32,8 +32,8 @@ mat-form-field {
      background-size: cover;
      background-attachment: fixed;
      bottom: 0px;
-     height: 100%;
      position: relative;
+     min-height: 550px;
 }
 
 #um {
