--- a/ng-blog/src/app/friends/friends-list/friends-list.component.html
+++ b/ng-blog/src/app/friends/friends-list/friends-list.component.html
@@ -1,32 +1,36 @@
 <div id="bg">
-<mat-card>
+  <mat-card>
     <mat-card-header>
-        <mat-card-title>Friend List</mat-card-title>
-        <mat-card-subtitle>Please select a friend to chat</mat-card-subtitle>
+      <mat-card-title>Friend List</mat-card-title>
+      <mat-card-subtitle>Please select a friend to chat</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
-        <div *ngFor="let friend of uFriends | async; index as i">
-          <mat-accordion>
-            <mat-expansion-panel>
-              <mat-expansion-panel-header>
-                <mat-panel-title>
-                  <div *ngIf="friend.read; else elseBlock">{{friend.name}}</div>
-                  <ng-template #elseBlock>{{friend.name}}   (have new messages)</ng-template>
-                </mat-panel-title>
-              </mat-expansion-panel-header>
-              <mat-form-field>
-                <input matInput [(ngModel)]="name" name="name">
-              </mat-form-field>
-              <button mat-flat-button color="primary" (click)="update((i))" [disabled]="!name">
-                <mat-icon>create</mat-icon>Edit Name</button>
-              <button id="ch" mat-flat-button color="accent" routerLink="/chat/{{friend.id}}">
-                <mat-icon>chat</mat-icon>Chat</button>
-              <button mat-flat-button color="warn" (click)="delete(i)">
-                <mat-icon>delete</mat-icon>Delete</button>
-            </mat-expansion-panel>
-          </mat-accordion>
-        </div>
+      <div *ngFor="let friend of uFriends | async; index as i">
+        <mat-accordion>
+          <mat-expansion-panel>
+            <mat-expansion-panel-header>
+              <mat-panel-title>
+                <div *ngIf="friend.read; else elseBlock">{{friend.name}}</div>
+                <ng-template #elseBlock>{{friend.name}} (have new messages)</ng-template>
+              </mat-panel-title>
+            </mat-expansion-panel-header>
+            <div>
+              please select an operation:
+              <div id="bts">
+                <button mat-button color="primary" (click)="update((i))">
+                  <mat-icon>create</mat-icon>Rename
+                </button>
+                <button mat-button color="accent" routerLink="/chat/{{friend.id}}">
+                  <mat-icon>chat</mat-icon>Chat
+                </button>
+                <button mat-button color="warn" (click)="delete(i)">
+                  <mat-icon>delete</mat-icon>Delete
+                </button>
+              </div>
+            </div>
+          </mat-expansion-panel>
+        </mat-accordion>
+      </div>
     </mat-card-content>
-</mat-card>
+  </mat-card>
 </div>
-
